# midgard-runtime

./: .gitignore  AUTHORS  Makefile.am  autoclean.sh  autogen.sh  configure.ac  midgard-runtime.pro
am/: covoptioncheck.am  qt.am  tests.am
debian/: changelog  control  midgard2-runtime.dsc  rules
dists/OBS/: debian.control  debian.midgard2-runtime.dsc  debian.rules  midgard2-runtime.dsc
m4/: ax_version_tools.m4  qt.m4
osx/: README
qt/: .gitignore  MAINTAINERS  NEWS
qt/debian/: midgard2-runtime.install
qt/src/: mainwindow.h  midgard2-runtime-installer  midgard2-runtime.qrc  phpprocess.cpp  phpprocess.h  runtimeprocess.cpp  sconnect.h  src.pro
src/: .gitignore  Makefile.am  main.cpp  mainwindow.cpp  mainwindow.h  midgard2-runtime-installer  phpprocess.cpp  runtime.cpp  runtime.h  runtimeprocess.cpp  runtimeprocess.h  serverprocess.cpp  serverprocess.h  src.pro
