DISTCHECK_CONFIGURE_FLAGS = --disable-doc --disable-coverage

AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	src

EXTRA_DIST = \
	debian/changelog \
	debian/control \
	debian/rules \
	debian/midgard2-runtime.dsc \
	debian/midgard2-runtime.install

DISTCLEANFILES = lcov.info lcov.html
